Update Railway deployment configuration and add deployment guide

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!@codemirror)/\"",
     "test:ci": "react-scripts test --watchAll=false --transformIgnorePatterns \"node_modules/(?!@codemirror)/\"",
     "eject": "react-scripts eject",
-    "build:production": "REACT_APP_API_URL=https://web-production-1e26.up.railway.app react-scripts build",
-    "deploy:railway": "npm run build:production && npx serve -s build"
+    "build:production": "REACT_APP_API_URL=https://web-copy-production-5b48.up.railway.app react-scripts build",
+    "deploy:railway": "npm run build:production && npx serve -s build",
+    "serve": "npx serve -s build"
   },
   "eslintConfig": {
     "extends": [
