--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-# We're keeping the build directory for now to make deployment easier
+# Uncomment the next line if you want to ignore the build directory
 # /build
 
 # misc
@@ -22,3 +22,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*node_modules/
+
+**/.claude/settings.local.json
