--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 # dependencies
 /node_modules
+node_modules/
+**/node_modules/
+/cors-proxy/node_modules/
 /.pnp
 .pnp.js
 
@@ -14,13 +17,37 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# logs
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*node_modules/
+yarn-error.log*
+*.log
+logs/
 
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Claude settings
 **/.claude/settings.local.json
+
+# Backup folders
+*-backup-*/
+backup/
+backups/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Build artifacts
+/build
